--- a/trunk/TODO.txt
+++ b/trunk/TODO.txt
@@ -1,5 +1,5 @@
-- antialiasing
-- WindowSizeHandler to toggle fullscreen
-
 - engine:
 	- logging
+	- COMMENTS!!!!
+	- WindowSizeHandler to toggle fullscreen
+	- antialiasing
