--- a/trunk/OnePercent/GameData/data/localization/en.xml
+++ b/trunk/OnePercent/GameData/data/localization/en.xml
@@ -2,15 +2,15 @@
 <root>
 
 	<group name="localization">
-		<parameter name="buttonText_startGame" type="string" value="Start Game" />
-		<parameter name="buttonText_endGame" type="string" value="End Game" />
+		<property name="buttonText_startGame" type="string" value="Start Game" />
+		<property name="buttonText_endGame" type="string" value="End Game" />
 		
-		<parameter name="infoText_selectCountry" type="string" value="Please select a country." />
-		<parameter name="infoText_selectCountryAgain" type="string" value="Click again to confirm your selection." />
+		<property name="infoText_selectCountry" type="string" value="Please select a country." />
+		<property name="infoText_selectCountryAgain" type="string" value="Click again to confirm your selection." />
 		
-		<parameter name="infoText_day" type="string" value="Day" />
+		<property name="infoText_day" type="string" value="Day" />
 		
-		<parameter name="infoText_loading" type="string" value="Loading" />
+		<property name="infoText_loading" type="string" value="Loading" />
 	</group>
 	
 </root>
