added nodeSwitches with correct render order to CountryOverlay; updated docs

--- a/Documentation/todo.txt
+++ b/Documentation/todo.txt
@@ -1,1 +1,2 @@
-cleanup countryoverlay pointers
+- less constructor parameters of CountryNode by passing CountryGeometry directly
+- cleanup countryoverlay pointers
